allow querying by created_at, updated_at values. Add those to response bodies
