# docs/swagger.json
@@ -521,6 +521,18 @@
                         "in": "query"
                     },
                     {
+                        "type": "string",
+                        "description": "The field to sort the results by ('timestamp', 'created_at', 'updated_at', 'id', default 'timestamp')",
+                        "name": "sort_by",
+                        "in": "query"
+                    },
+                    {
+                        "type": "string",
+                        "description": "The field that tstart and tend should filter against ('timestamp', 'created_at', 'updated_at', default 'timestamp')",
+                        "name": "time_field",
+                        "in": "query"
+                    },
+                    {
                         "type": "integer",
                         "format": "int64",
                         "description": "Start timestamp (Unix milliseconds)",
@@ -2086,6 +2098,9 @@
         "entryhandler.EntryResponse": {
             "type": "object",
             "properties": {
+                "created_at": {
+                    "type": "integer"
+                },
                 "custom_fields": {
                     "type": "object",
                     "additionalProperties": {}
@@ -2116,6 +2131,9 @@
                     "type": "string"
                 },
                 "timestamp": {
+                    "type": "integer"
+                },
+                "updated_at": {
                     "type": "integer"
                 }
             }
@@ -2160,6 +2178,9 @@
         "entryhandler.PartialEntryResponse": {
             "type": "object",
             "properties": {
+                "created_at": {
+                    "type": "integer"
+                },
                 "custom_fields": {
                     "type": "object",
                     "additionalProperties": {}
@@ -2177,6 +2198,9 @@
                     "type": "string"
                 },
                 "timestamp": {
+                    "type": "integer"
+                },
+                "updated_at": {
                     "type": "integer"
                 }
             }
